--- a/account_invoice_installments/views/product_template_view.xml
+++ b/account_invoice_installments/views/product_template_view.xml
@@ -14,29 +14,29 @@
                     <label for="installments_allowed"/>
                 </span>
             </xpath>
-            <xpath expr="//page[@name='general_information']//group" position="inside">
-                <group invisible="installments_allowed == False">
-                    <field name="installment_number" string="No. of Installments"/>
-                    <field name="first_payment" string="First Payment"/>
-                    <field name="installment_amount" string="Installment Amount"/>
-                </group>
+<!--            <xpath expr="//page[@name='general_information']//group" position="inside">-->
+<!--                <group invisible="installments_allowed == False">-->
+<!--                    <field name="installment_number" string="No. of Installments"/>-->
+<!--                    <field name="first_payment" string="First Payment"/>-->
+<!--                    <field name="installment_amount" string="Installment Amount"/>-->
+<!--                </group>-->
 
-            </xpath>
+<!--            </xpath>-->
         </field>
     </record>
-    <record id="product_template_tree_installments" model="ir.ui.view">
-        <field name="name">product.template.tree.installments</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_tree_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//field[@name='list_price']" position="after">
-                <field name="installments_allowed"/>
-                <field name="installment_number" invisible="installments_allowed == False"/>
-                <field name="first_payment" invisible="installments_allowed == False"/>
-                <field name="installment_amount" invisible="installments_allowed == False"/>
-            </xpath>
-        </field>
-    </record>
+<!--    <record id="product_template_tree_installments" model="ir.ui.view">-->
+<!--        <field name="name">product.template.tree.installments</field>-->
+<!--        <field name="model">product.template</field>-->
+<!--        <field name="inherit_id" ref="product.product_template_tree_view"/>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <xpath expr="//field[@name='list_price']" position="after">-->
+<!--                <field name="installments_allowed"/>-->
+<!--                <field name="installment_number" invisible="installments_allowed == False"/>-->
+<!--                <field name="first_payment" invisible="installments_allowed == False"/>-->
+<!--                <field name="installment_amount" invisible="installments_allowed == False"/>-->
+<!--            </xpath>-->
+<!--        </field>-->
+<!--    </record>-->
     <record id="sale_order_form_installments" model="ir.ui.view">
         <field name="name">sale.order.form.installments</field>
         <field name="model">sale.order</field>
@@ -46,7 +46,7 @@
             <!-- A) Inline list (tree) inside the Quotation form -->
             <xpath expr="//field[@name='order_line']/list" position="inside">
                 <!-- helper to drive attrs -->
-                <field name="installments_allowed" invisible="1"/>
+                <field name="installments_allowed" />
                 <field name="installment_number"
                        invisible="installments_allowed == False"/>
                 <field name="first_payment"
