new add payment type in sales order

--- a/account_invoice_installments/views/product_template_view.xml
+++ b/account_invoice_installments/views/product_template_view.xml
@@ -42,6 +42,14 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+             <!-- Insert before payment_term_id wherever it appears (usually Other Info/Invoicing) -->
+            <xpath expr="//sheet//field[@name='payment_term_id']" position="before">
+                <field name="payment_type"/>
+            </xpath>
+
+            <xpath expr="//sheet//field[@name='payment_term_id']" position="attributes">
+                  <attribute name="invisible">payment_type == 'immediate'</attribute>
+            </xpath>
 
             <!-- A) Inline list (tree) inside the Quotation form -->
             <xpath expr="//field[@name='order_line']/list" position="inside">
