--- a/account_invoice_installments/views/sales_orders_view.xml
+++ b/account_invoice_installments/views/sales_orders_view.xml
@@ -17,8 +17,26 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
+
             <xpath expr="//field[@name='client_order_ref']" position="after">
                 <field name="order_type"/>
+            </xpath>
+        </field>
+    </record>
+    <record id="sale_order_form_installments" model="ir.ui.view">
+        <field name="name">sale.order.form.installments</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+             <!-- Insert before payment_term_id wherever it appears (usually Other Info/Invoicing) -->
+            <xpath expr="//sheet//field[@name='payment_term_id']" position="before">
+                <field name="payment_type"/>
+            </xpath>
+            <xpath expr="//notebook" position="inside">
+                <page string="contact person">
+
+                </page>
+
             </xpath>
         </field>
     </record>
