--- a/account_invoice_installments/views/sales_orders_view.xml
+++ b/account_invoice_installments/views/sales_orders_view.xml
@@ -32,8 +32,13 @@
             <xpath expr="//sheet//field[@name='payment_term_id']" position="before">
                 <field name="payment_type"/>
             </xpath>
+            <xpath expr="//sheet//field[@name='payment_term_id']" position="attributes">
+                 <attribute name="invisible">payment_type in ['immediate', 'regular'] </attribute>
+            </xpath>
+
+
             <xpath expr="//notebook" position="inside">
-                <page string="contact person">
+                <page string="Guarantors">
 
                 </page>
 
@@ -88,7 +93,7 @@
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_standard_orders': 1, 'default_order_type': 'standard'}</field>
         <field name="domain">[('order_type', '=', 'standard')]</field>
-        <field name="search_view_id" ref="sale.view_sales_order_filter"/>
+<!--        <field name="search_view_id" ref="sale.view_sales_order_filter"/>-->
     </record>
 
     <!-- Custom Sales Action -->
