--- a/account_invoice_installments/views/menu_views.xml
+++ b/account_invoice_installments/views/menu_views.xml
@@ -1,21 +1,21 @@
 <!-- views/menu_views.xml -->
 <odoo>
     <!-- Main Sales Menu -->
-    <menuitem id="menu_sales_root" name="حركات الجمعية" sequence="10"
+    <menuitem id="menu_sales_root" name="FRTZ" sequence="10"
               web_icon="account_invoice_installments,static/description/icon.png"/>
 
     <!-- Standard Sales Submenu -->
     <!--    <menuitem id="menu_standard_sales" name="Orders" parent="menu_sales_root" sequence="10"/>-->
     <!--    <menuitem id="menu_standard_sales2" name="Payments" parent="menu_sales_root" sequence="10"/>-->
-    <menuitem id="menu_standard_orders" name="طلب البيع" parent="menu_sales_root" action="action_standard_orders"
+    <menuitem id="menu_standard_orders" name="Standard Sale Order" parent="menu_sales_root" action="action_standard_orders"
               sequence="10"/>
-    <menuitem id="menu_custom_orders" name="طلب بيع مستودع" parent="menu_sales_root" action="action_custom_orders"
+    <menuitem id="menu_custom_orders" name="Warehouse Sale Order" parent="menu_sales_root" action="action_custom_orders"
               sequence="20"/>
-    <menuitem id="menu_wholesale_orders" name="طلب بيع خارجي" parent="menu_sales_root" action="action_wholesale_orders"
+    <menuitem id="menu_wholesale_orders" name="External Sales Order" parent="menu_sales_root" action="action_wholesale_orders"
               sequence="30"/>
-    <menuitem id="menu_subscription_orders" name="طلب بيع خدمة" parent="menu_sales_root"
+    <menuitem id="menu_subscription_orders" name="Service Sales Order" parent="menu_sales_root"
               action="action_subscription_orders" sequence="40"/>
-    <menuitem id="menu_standard_orders2" name="payment request" parent="menu_sales_root" action="" sequence="50"/>
+    <menuitem id="menu_standard_orders2" name="Payment Request" parent="menu_sales_root" action="" sequence="50"/>
 
 
 </odoo>
