--- a/account_invoice_installments/views/sales_orders_view.xml
+++ b/account_invoice_installments/views/sales_orders_view.xml
@@ -49,10 +49,10 @@
         <field name="arch" type="xml">
             <xpath expr="//search" position="inside">
                 <!-- Default filters for each type -->
-                <filter string="طلب البيع" name="standard_orders" domain="[('order_type','=','standard')]"/>
-                <filter string="طلب بيع مستودع" name="custom_orders" domain="[('order_type','=','custom')]"/>
-                <filter string="طلب بيع خارجي" name="wholesale_orders" domain="[('order_type','=','wholesale')]"/>
-                <filter string="طلب بيع خدمة" name="subscription_orders" domain="[('order_type','=','subscription')]"/>
+                <filter string="Standard Sale Order" name="standard_orders" domain="[('order_type','=','standard')]"/>
+                <filter string="Warehouse Sale Order" name="custom_orders" domain="[('order_type','=','custom')]"/>
+                <filter string="External Sales Order" name="wholesale_orders" domain="[('order_type','=','wholesale')]"/>
+                <filter string="Service Sales Order" name="subscription_orders" domain="[('order_type','=','subscription')]"/>
 
                 <!-- Group by Order Type -->
                 <filter string="Order Type" name="order_type" context="{'group_by': 'order_type'}"/>
@@ -84,7 +84,7 @@
     <!--    </record>-->
     <!-- Standard Sales Action -->
     <record id="action_standard_orders" model="ir.actions.act_window">
-        <field name="name">طلب البيع</field>
+        <field name="name">Standard Sale Order</field>
         <field name="res_model">sale.order</field>
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_standard_orders': 1, 'default_order_type': 'standard'}</field>
@@ -94,7 +94,7 @@
 
     <!-- Custom Sales Action -->
     <record id="action_custom_orders" model="ir.actions.act_window">
-        <field name="name">طلب بيع مستودع</field>
+        <field name="name">Warehouse Sale Order</field>
         <field name="res_model">sale.order</field>
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_custom_orders': 1, 'default_order_type': 'custom'}</field>
@@ -104,7 +104,7 @@
 
     <!-- Wholesale Sales Action -->
     <record id="action_wholesale_orders" model="ir.actions.act_window">
-        <field name="name">طلب بيع خارجي</field>
+        <field name="name">External Sales Order</field>
         <field name="res_model">sale.order</field>
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_wholesale_orders': 1, 'default_order_type': 'wholesale'}</field>
@@ -113,7 +113,7 @@
     </record>
         <!-- Subscription Sales Action -->
     <record id="action_subscription_orders" model="ir.actions.act_window">
-        <field name="name">طلب بيع خدمة</field>
+        <field name="name">Service Sales Order</field>
         <field name="res_model">sale.order</field>
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_subscription_orders': 1, 'default_order_type': 'subscription'}</field>
