--- a/invoice_installment_extension/views/account_payment_term_views.xml
+++ b/invoice_installment_extension/views/account_payment_term_views.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Minimal view for now - will be enhanced after model fields are created -->
+    <!-- Payment Term Form View - Add Installment Fields -->
     <record id="view_payment_term_form_installment" model="ir.ui.view">
         <field name="name">account.payment.term.form.installment</field>
         <field name="model">account.payment.term</field>
         <field name="inherit_id" ref="account.view_payment_term_form"/>
         <field name="arch" type="xml">
-            <!-- Placeholder for future installment fields -->
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="is_installment_term"/>
+                <field name="installment_count"/>
+                <field name="first_payment_percentage"/>
+            </xpath>
+        </field>
+    </record>
+
+    <!-- Payment Term Tree View - Add Installment Columns -->
+    <record id="view_payment_term_tree_installment" model="ir.ui.view">
+        <field name="name">account.payment.term.tree.installment</field>
+        <field name="model">account.payment.term</field>
+        <field name="inherit_id" ref="account.view_payment_term_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="is_installment_term" optional="hide"/>
+                <field name="installment_count" optional="hide"/>
+            </xpath>
         </field>
     </record>
 </odoo>
