add installment information to contact and inhance invoice form

--- a/frtz_customer/views/sale_order_view.xml
+++ b/frtz_customer/views/sale_order_view.xml
@@ -12,7 +12,7 @@
                     <field name="customer_guarantees_ids" nolabel="1">
                         <list>
                             <field name="name"/>
-                            <field name="customer_number"/>
+                            <field name="ref"/>
                         </list>
                 </field>
                </page>
