--- a/frtz_customer/views/customer_view.xml
+++ b/frtz_customer/views/customer_view.xml
@@ -11,7 +11,7 @@
                 <attribute name="class">d-flex align-items-center gap-3</attribute>
             </xpath>
             <xpath expr="//div[hasclass('oe_title')]//h1/field[@name='name']" position="after">
-                <field name="customer_number"
+                <field name="ref"
                        style="width: 200px; font-size: 14px;"
                        placeholder="Customer Code"/>
             </xpath>
