--- a/invoice_installment_extension/views/installment_list_views.xml
+++ b/invoice_installment_extension/views/installment_list_views.xml
@@ -53,6 +53,9 @@
                         </group>
                         <group>
                             <field name="partner_id"/>
+                            <field name="customer_name"/>
+                            <field name="customer_number"/>
+                            <field name="customer_guarantees_names"/>
                         </group>
                     </group>
                     
@@ -72,12 +75,15 @@
             <list>
                 <field name="sequence"/>
                 <field name="invoice_id"/>
+                <field name="customer_name"/>
+                <field name="customer_number"/>
                 <field name="amount" widget="monetary" options="{'currency_field': 'currency_id'}"/>
                 <field name="due_date"/>
                 <field name="paid_date"/>
                 <field name="state" widget="badge" decoration-success="state == 'paid'" decoration-danger="state == 'overdue'" decoration-warning="state == 'pending'"/>
                 <field name="is_late"/>
                 <field name="days_overdue"/>
+                <field name="customer_guarantees_names" optional="hide"/>
                 <field name="payment_reference"/>
             </list>
         </field>
@@ -92,6 +98,8 @@
                 <field name="name"/>
                 <field name="invoice_id"/>
                 <field name="partner_id"/>
+                <field name="customer_name"/>
+                <field name="customer_number"/>
                 <filter string="Pending" name="pending" domain="[('state', '=', 'pending')]"/>
                 <filter string="Paid" name="paid" domain="[('state', '=', 'paid')]"/>
                 <filter string="Overdue" name="overdue" domain="[('state', '=', 'overdue')]"/>
