--- a/frtz_customer/views/res_partner_installment_views.xml
+++ b/frtz_customer/views/res_partner_installment_views.xml
@@ -30,10 +30,10 @@
                                 class="oe_highlight"
                                 invisible="not has_installments"/>
                     </group>
-
-                    <group string="Recent Installments">
-                        <field name="installment_list_ids" nolabel="1" context="{'list_view_ref': 'invoice_installment_extension.view_installment_list_list'}"/>
-                    </group>
+<!--                    <field name="view_installments"/>-->
+<!--                    <group string="Recent Installments" invisible="view_installments == 'False'">-->
+<!--                        <field name="installment_list_ids" nolabel="1" context="{'list_view_ref': 'invoice_installment_extension.view_installment_list_list'}"/>-->
+<!--                    </group>-->
                 </page>
             </xpath>
         </field>
