--- a/account_invoice_installments/views/sales_orders_view.xml
+++ b/account_invoice_installments/views/sales_orders_view.xml
@@ -28,7 +28,7 @@
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
-             <!-- Insert before payment_term_id wherever it appears (usually Other Info/Invoicing) -->
+            <!-- Insert before payment_term_id wherever it appears (usually Other Info/Invoicing) -->
             <xpath expr="//sheet//field[@name='date_order']" position="before">
                 <field name="order_type"/>
             </xpath>
@@ -36,7 +36,10 @@
                 <field name="payment_type"/>
             </xpath>
             <xpath expr="//sheet//field[@name='payment_term_id']" position="attributes">
-                 <attribute name="invisible">payment_type in ['immediate', 'regular'] </attribute>
+                <attribute name="invisible">payment_type in ['immediate', 'regular']</attribute>
+            </xpath>
+            <xpath expr="//field[@name='partner_id']" position="after">
+                <field name="vendor_name_id" invisible="order_type != 'custom'"/>
             </xpath>
 
         </field>
@@ -51,8 +54,10 @@
                 <!-- Default filters for each type -->
                 <filter string="Standard Sale Order" name="standard_orders" domain="[('order_type','=','standard')]"/>
                 <filter string="Warehouse Sale Order" name="custom_orders" domain="[('order_type','=','custom')]"/>
-                <filter string="External Sales Order" name="wholesale_orders" domain="[('order_type','=','wholesale')]"/>
-                <filter string="Service Sales Order" name="subscription_orders" domain="[('order_type','=','subscription')]"/>
+                <filter string="External Sales Order" name="wholesale_orders"
+                        domain="[('order_type','=','wholesale')]"/>
+                <filter string="Service Sales Order" name="subscription_orders"
+                        domain="[('order_type','=','subscription')]"/>
 
                 <!-- Group by Order Type -->
                 <filter string="Order Type" name="order_type" context="{'group_by': 'order_type'}"/>
@@ -89,7 +94,7 @@
         <field name="view_mode">list,form,kanban,calendar,pivot,graph</field>
         <field name="context">{'search_default_standard_orders': 1, 'default_order_type': 'standard'}</field>
         <field name="domain">[('order_type', '=', 'standard')]</field>
-<!--        <field name="search_view_id" ref="sale.view_sales_order_filter"/>-->
+        <!--        <field name="search_view_id" ref="sale.view_sales_order_filter"/>-->
     </record>
 
     <!-- Custom Sales Action -->
@@ -111,7 +116,7 @@
         <field name="domain">[('order_type', '=', 'wholesale')]</field>
         <field name="search_view_id" ref="sale.view_sales_order_filter"/>
     </record>
-        <!-- Subscription Sales Action -->
+    <!-- Subscription Sales Action -->
     <record id="action_subscription_orders" model="ir.actions.act_window">
         <field name="name">Service Sales Order</field>
         <field name="res_model">sale.order</field>
