--- a/pricelist_expression/views/pricelist_item_views.xml
+++ b/pricelist_expression/views/pricelist_item_views.xml
@@ -42,12 +42,12 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='order_line']/list/field[@name='name']" position="after">
-                <field name="installment_num" widget="float" string="Installments"/>
-                <field name="first_payment" widget="float" string="First Payment"/>
+                <field name="installment_num" widget="float" string="Installments" invisible="is_immediate_term"/>
+                <field name="first_payment" widget="float" string="First Payment" invisible="is_immediate_term"/>
             </xpath>
             <xpath expr="//field[@name='order_line']/form//field[@name='price_unit']" position="after">
-                <field name="installment_num" widget="float" string="Installments"/>
-                <field name="first_payment" widget="float" string="First Payment"/>
+                <field name="installment_num" widget="float" string="Installments" invisible="is_immediate_term"/>
+                <field name="first_payment" widget="float" string="First Payment" invisible="is_immediate_term"/>
             </xpath>
         </field>
     </record>
