[update] add lable for company name

--- a/frtz_customer/views/customer_view.xml
+++ b/frtz_customer/views/customer_view.xml
@@ -18,6 +18,10 @@
             <xpath expr="//field[@name='category_id']" position="after">
                 <field name="status"/>
             </xpath>
+
+             <xpath expr="//field[@name='parent_id']" position="before">
+                <span >Company Name</span>
+            </xpath>
         </field>
     </record>
 </odoo>
