--- a/invoice_installment_extension/views/account_payment_views.xml
+++ b/invoice_installment_extension/views/account_payment_views.xml
@@ -1,57 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <!-- Account Payment Form View - Add Invoices with Pending Installments Page -->
-    <record id="view_account_payment_form_installments" model="ir.ui.view">
-        <field name="name">account.payment.form.installments</field>
+    <!-- Account Payment Form View - Add Invoice Payment Section -->
+    <record id="view_account_payment_form_invoice_payment" model="ir.ui.view">
+        <field name="name">account.payment.form.invoice.payment</field>
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
-            <!-- Add hidden fields -->
-            <xpath expr="//sheet" position="inside">
-                <field name="invoice_ids_with_pending_installments" invisible="1"/>
-                <field name="selected_installment_invoice_ids" invisible="1"/>
-            </xpath>
-            <!-- Add notebook page with invoices -->
+            <!-- Add notebook page for Transions -->
             <xpath expr="//notebook[@name='payment_notebook']" position="inside">
-                <page string="Invoices" name="invoices_with_pending_installments"
+                <!-- Transions Page -->
+                <page string="Transions" name="transions"
                       invisible="not partner_id or partner_type != 'customer'">
-                    <!-- Display invoices list (read-only) -->
-                    <field name="invoice_ids_with_pending_installments" nolabel="1">
-                        <list string="Invoices with Pending Installments">
-                            <field name="name"/>
-                            <field name="invoice_date"/>
-                            <field name="amount_total" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="amount_residual" widget="monetary" options="{'currency_field': 'currency_id'}"
-                                   string="Amount Due"/>
-                            <field name="installment_count" string="Total Installments"/>
-                            <field name="pending_installment_count" string="Pending Installments"/>
-                            <field name="paid_installment_count" string="Paid Installments"/>
-                            <field name="nearest_due_installment_amount" widget="monetary" options="{'currency_field': 'currency_id'}" string="Nearest Due Amount"/>
-                            <field name="nearest_due_installment_date" string="Nearest Due Date"/>
-                            <field name="state" widget="badge" decoration-success="state == 'posted'" decoration-info="state == 'draft'"/>
-                            <button name="action_view_installment_invoice" string="View" type="object" class="btn-primary" icon="fa-external-link"/>
+                    <!-- Date filter and payment summary -->
+                    <group>
+                        <group>
+                            <field name="payment_due_date_filter" string="Due Date" 
+                                   options="{'datepicker': {'min_date': False}}"
+                                   help="This date will be applied to all invoices as due_date_filter"/>
+                        </group>
+                        <group>
+                            <field name="amount" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                            <field name="total_control_to_pay" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}" 
+                                   readonly="1"/>
+                            <field name="control_payment_remaining_amount" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}" 
+                                   readonly="1"
+                                   style="color: red; font-weight: bold;"
+                                   invisible="control_payment_remaining_amount == 0"/>
+                        </group>
+                    </group>
+                    
+                    <field name="control_payment_ids" nolabel="1">
+                        <list string="Transions" editable="bottom" create="1" delete="1">
+                            <field name="invoice_id" required="1" options="{'no_create': True, 'no_create_edit': True}"/>
+                            <field name="invoice_name" string="Transion" readonly="1"/>
+                            <field name="invoice_date" string="Transion Date" readonly="1"/>
+                            <field name="amount_total" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}" 
+                                   readonly="1"/>
+                            <field name="total_remaining_amount" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}" 
+                                   readonly="1"/>
+                            <field name="due_amount" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}" 
+                                   readonly="1"/>
+                            <field name="due_date" 
+                                   string="Due Date" 
+                                   options="{'datepicker': {'min_date': False}}"
+                                   invisible="1"/>
+                            <field name="to_pay" 
+                                   widget="monetary" 
+                                   options="{'currency_field': 'currency_id'}"/>
                         </list>
                     </field>
-                    <!-- Selection field with checkboxes -->
-                    <group>
-                        <field name="selected_installment_invoice_ids" 
-                               string="Select Invoices"
-                               domain="[('id', 'in', invoice_ids_with_pending_installments)]"
-                               widget="many2many_checkboxes"
-                               options="{'no_create': True, 'no_create_edit': True}"/>
+                    
+                    <!-- Validation message -->
+                    <group invisible="control_payment_remaining_amount == 0">
+                        <div class="alert alert-warning" role="alert">
+                            <strong>Warning:</strong> Total control to pay amount must equal the payment amount.
+                            Current difference: <field name="control_payment_remaining_amount" 
+                                                       widget="monetary" 
+                                                       options="{'currency_field': 'currency_id'}" 
+                                                       readonly="1"
+                                                       nolabel="1"/>
+                        </div>
                     </group>
-                    <!-- Calculated fields for selected invoices -->
-                    <group string="Calculated Amounts" invisible="not selected_installment_invoice_ids">
-                        <group>
-                            <field name="total_selected_nearest_due_amount" 
-                                   widget="monetary" 
-                                   options="{'currency_field': 'currency_id'}"
-                                   readonly="1"/>
-                            <field name="payment_amount_after_nearest_due" 
-                                   widget="monetary" 
-                                   options="{'currency_field': 'currency_id'}"
-                                   readonly="1"/>
-                        </group>
+                    
+                    <!-- Process payments button -->
+                    <group invisible="not control_payment_ids or total_control_to_pay &lt;= 0">
+                        <button name="action_process_control_payments" 
+                                string="Process Control Payments" 
+                                type="object" 
+                                class="oe_highlight"
+                                icon="fa-money"
+                                invisible="control_payment_remaining_amount != 0"/>
                     </group>
                 </page>
             </xpath>
